新增详细代码注释(#12)